src/test/ui/variance/variance-regions-unused-direct.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/variance-regions-unused-direct.rs:5:18
   |
LL | struct Bivariant<'a>;
   |                 -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'d` never used
  --> $DIR/variance-regions-unused-direct.rs:7:19
   |
LL | struct Struct<'a, 'd> {
   |                 --^^
   |                 |
   |                 help: elide the unused lifetime

warning: lifetime parameter `'d` never used
  --> $DIR/variance-regions-unused-direct.rs:11:17
   |
LL | trait Trait<'a, 'd> {
   |               --^^
   |               |
   |               help: elide the unused lifetime

error[E0392]: parameter `'a` is never used
  --> $DIR/variance-regions-unused-direct.rs:5:18
   |
LL | struct Bivariant<'a>;
   |                  ^^ unused parameter
   |
   = help: consider removing `'a` or using a marker such as `std::marker::PhantomData`

error[E0392]: parameter `'d` is never used
  --> $DIR/variance-regions-unused-direct.rs:7:19
   |
LL | struct Struct<'a, 'd> {
   |                   ^^ unused parameter
   |
   = help: consider removing `'d` or using a marker such as `std::marker::PhantomData`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
